--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "dotenv": "^16.0.3",
     "sass": "^1.61.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-env-compatible": "^1.1.1"
   }
 }
