--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "node": "18.13.0",
+  "npm": "8.19.3",
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "axios": "^1.3.5",
