--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "npm": "8.19.3",
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "axios": "^1.3.5",
     "express": "^4.18.2",
     "langchain": "^0.0.51",
